CLIENT-2451, auto layout issue caused by css min-height(v1.12.5)

--- a/ProtonMail/ProtonMail/Resource/editor.css
+++ b/ProtonMail/ProtonMail/Resource/editor.css
@@ -234,3 +234,7 @@ legend {
 .pm_font_larger {
     font-size: 1.8em;
 }
+
+*[style*="min-height"] {
+    min-height: initial !important;
+}
